Bug 205648 - /proc/PID/cwd isn't available in non-Linux systems
Summary: /proc/PID/cwd isn't available in non-Linux systems
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-30 05:19 UTC by Raphael Kubo da Costa
Modified: 2009-08-31 16:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raphael Kubo da Costa 2009-08-30 05:19:47 UTC
Version:            (using Devel)
OS:                FreeBSD
Installed from:    Compiled sources

Currently, Konsole tries to read from /proc/PID-NUMBER/cwd in order to obtain information such as Current Directory and Program Name that is used, for example, in its tabs.

However, systems such as FreeBSD (and Windows, I guess) don't have such information available, so by default I get " : " as my tab names in Konsole.
Comment 1 Robert Knight 2009-08-30 17:50:20 UTC
A small amount of platform-specific code does need to be written to support this feature, including detecting whether the needed information it is available or not.  I have received and integrated patches for Solaris so far.  Patches to add support for BSD would be welcome at reviewboard.kde.org

Windows is not yet a supported platform for Konsole - the state of that is as I understand it very much work in progress.
Comment 2 Raphael Kubo da Costa 2009-08-31 06:02:06 UTC
Hi there. I've just submitted a patch for review - http://reviewboard.kde.org/r/1485/

Thanks!
Comment 3 Raphael Kubo da Costa 2009-08-31 16:31:26 UTC
SVN commit 1017793 by rkcosta:

Add support for retrieving process information for FreeBSD.

REVIEW: 1485
BUG: 205648


 M  +95 -0     ProcessInfo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1017793