Add support for retrieving process information for FreeBSD.

REVIEW: 1485
BUG: 205648

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1017793